--- a/index.html
+++ b/index.html
@@ -17,16 +17,19 @@
         <section id="blog" class="grid">
           <article class="item">
             <div class="content">
+              <h3 class="date sr-only">june 13, 2021</h3>
               <img
                 src="./img/2021-06-13.jpg"
-                alt="watercolour painting of a corner of a greek-style outdoor amphitheatre"
+                alt="watercolour painting of a corner of a greek-style amphitheatre"
               />
-              <p>amphitheatre at Guild Park, june 13 2021</p>
+              <p class="text">amphitheatre at Guild Park</p>
+              <p class="date" aria-hidden="true">june 13, 2021</p>
             </div>
           </article>
           <article class="item">
             <div class="content">
-              <p>
+              <h3 class="date sr-only">june 13, 2021</h3>
+              <p class="text">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 Blanditiis cum sint quos quod soluta tempora qui eos laudantium
                 magnam pariatur culpa velit hic explicabo quae fugiat earum ea
@@ -34,53 +37,69 @@
                 Voluptate laudantium debitis exercitationem consequuntur
                 voluptatum.
               </p>
+              <p class="text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem,
+                hic dicta iusto vero, eveniet repudiandae ad sint perspiciatis
+                optio eaque id quae aspernatur.
+              </p>
+              <p class="date" aria-hidden="true">june 13, 2021</p>
             </div>
           </article>
           <article class="item">
             <div class="content">
-              <p>
+              <h3 class="date sr-only">june 13, 2021</h3>
+              <p class="text">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                 Dolorem porro et eaque numquam libero, totam obcaecati
                 perferendis voluptatum neque eligendi, corrupti sunt ea.
               </p>
+              <p class="date" aria-hidden="true">june 13, 2021</p>
             </div>
           </article>
           <article class="item">
             <div class="content">
+              <h3 class="date sr-only">june 13, 2021</h3>
               <img src="./img/2021-06-13.jpg" alt="watercolours" />
-              <p>amphitheatre at Guild Park, june 13 2021</p>
+              <p class="date" aria-hidden="true">june 13, 2021</p>
             </div>
           </article>
           <article class="item">
             <div class="content">
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Blanditiis cum sint quos quod soluta tempora qui eos laudantium
-                magnam pariatur culpa velit hic explicabo quae fugiat earum ea
-                quam officia doloremque accusantium, aspernatur debitis?
-                Voluptate laudantium debitis exercitationem consequuntur
-                voluptatum.
-              </p>
-            </div>
-          </article>
-          <article class="item">
-            <div class="content">
-              <p>
+              <h3 class="date sr-only">june 13, 2021</h3>
+              <p class="text">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                 Dolorem porro et eaque numquam libero, totam obcaecati
                 perferendis voluptatum neque eligendi, corrupti sunt ea.
               </p>
+              <p class="text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et
+                dolores dicta id?
+              </p>
+              <p class="date" aria-hidden="true">june 13, 2021</p>
             </div>
           </article>
           <article class="item">
             <div class="content">
+              <h3 class="date sr-only">june 13, 2021</h3>
+              <p class="text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Dolorem porro et eaque numquam libero, totam obcaecati
+                perferendis voluptatum neque eligendi, corrupti sunt ea.
+              </p>
+              <p class="date" aria-hidden="true">june 13, 2021</p>
+            </div>
+          </article>
+          <article class="item">
+            <div class="content">
+              <h3 class="date sr-only">june 13, 2021</h3>
               <img src="./img/2021-06-13.jpg" alt="" />
-              <p>amphitheatre at Guild Park, june 13 2021</p>
+              <p class="date" aria-hidden="true">june 13, 2021</p>
             </div>
           </article>
           <article class="item">
             <div class="content">
-              <p>
+              <h3 class="date sr-only">june 13, 2021</h3>
+              <p class="text">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 Blanditiis cum sint quos quod soluta tempora qui eos laudantium
                 magnam pariatur culpa velit hic explicabo quae fugiat earum ea
@@ -88,15 +107,18 @@
                 Voluptate laudantium debitis exercitationem consequuntur
                 voluptatum.
               </p>
+              <p class="date" aria-hidden="true">june 13, 2021</p>
             </div>
           </article>
           <article class="item">
             <div class="content">
-              <p>
+              <h3 class="date sr-only">june 13, 2021</h3>
+              <p class="text">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                 Dolorem porro et eaque numquam libero, totam obcaecati
                 perferendis voluptatum neque eligendi, corrupti sunt ea.
               </p>
+              <p class="date" aria-hidden="true">june 13, 2021</p>
             </div>
           </article>
         </section>
