resize on image load

--- a/index.html
+++ b/index.html
@@ -17,114 +17,74 @@
         <section id="blog" class="grid">
           <article class="item">
             <div class="content">
-              <h3 class="date sr-only">june 13, 2021</h3>
+              <h3 class="date sr-only">march 21, 2021</h3>
               <img
                 src="./img/2021-06-13.jpg"
                 alt="watercolour painting of a corner of a greek-style amphitheatre"
               />
-              <p class="text">amphitheatre at Guild Park</p>
-              <p class="date" aria-hidden="true">june 13, 2021</p>
-            </div>
-          </article>
-          <article class="item">
-            <div class="content">
-              <h3 class="date sr-only">june 13, 2021</h3>
               <p class="text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Blanditiis cum sint quos quod soluta tempora qui eos laudantium
-                magnam pariatur culpa velit hic explicabo quae fugiat earum ea
-                quam officia doloremque accusantium, aspernatur debitis?
-                Voluptate laudantium debitis exercitationem consequuntur
-                voluptatum.
-              </p>
-              <p class="text">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem,
-                hic dicta iusto vero, eveniet repudiandae ad sint perspiciatis
-                optio eaque id quae aspernatur.
+                amphitheatre at Guild Park, plein air painting. was nice to go
+                outside & paint!
               </p>
               <p class="date" aria-hidden="true">june 13, 2021</p>
             </div>
           </article>
           <article class="item">
             <div class="content">
-              <h3 class="date sr-only">june 13, 2021</h3>
+              <h3 class="date sr-only">march 12, 2021</h3>
+              <img src="./img/2021-03-12.jpg" alt="watercolour painting" />
               <p class="text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Dolorem porro et eaque numquam libero, totam obcaecati
-                perferendis voluptatum neque eligendi, corrupti sunt ea.
+                virtual plein air,
+                <a
+                  href="https://www.mapcrunch.com/p/37.759256_139.06883_69.73_0.61_0"
+                  target="_blank"
+                  >reference</a
+                >
               </p>
-              <p class="date" aria-hidden="true">june 13, 2021</p>
+              <p class="date" aria-hidden="true">mar 12, 2021</p>
             </div>
           </article>
           <article class="item">
             <div class="content">
-              <h3 class="date sr-only">june 13, 2021</h3>
-              <img src="./img/2021-06-13.jpg" alt="watercolours" />
-              <p class="date" aria-hidden="true">june 13, 2021</p>
+              <h3 class="date sr-only">march 4, 2021</h3>
+              <img src="./img/2021-03-04.jpg" alt="pencil drawing" />
+              <p class="text">virtual life drawing</p>
+              <p class="date" aria-hidden="true">mar 04, 2021</p>
             </div>
           </article>
           <article class="item">
             <div class="content">
-              <h3 class="date sr-only">june 13, 2021</h3>
+              <h3 class="date sr-only">february 4, 2021</h3>
+              <img src="./img/2021-02-04.jpg" alt="pencil drawing" />
               <p class="text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Dolorem porro et eaque numquam libero, totam obcaecati
-                perferendis voluptatum neque eligendi, corrupti sunt ea.
+                virtual life drawing. very happy with this one as I managed to
+                draw the faces pretty well, which I was never really able to do
+                before.
               </p>
-              <p class="text">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et
-                dolores dicta id?
-              </p>
-              <p class="date" aria-hidden="true">june 13, 2021</p>
+              <p class="date" aria-hidden="true">feb 04, 2021</p>
             </div>
           </article>
           <article class="item">
             <div class="content">
-              <h3 class="date sr-only">june 13, 2021</h3>
-              <p class="text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Dolorem porro et eaque numquam libero, totam obcaecati
-                perferendis voluptatum neque eligendi, corrupti sunt ea.
-              </p>
-              <p class="date" aria-hidden="true">june 13, 2021</p>
+              <h3 class="date sr-only">january 29, 2021</h3>
+              <img src="img/2021-01-29.jpg" alt="watercolour painting" />
+              <p class="text">virtual plein air</p>
+              <p class="date" aria-hidden="true">jan 29, 2021</p>
             </div>
           </article>
           <article class="item">
             <div class="content">
-              <h3 class="date sr-only">june 13, 2021</h3>
-              <img src="./img/2021-06-13.jpg" alt="" />
-              <p class="date" aria-hidden="true">june 13, 2021</p>
-            </div>
-          </article>
-          <article class="item">
-            <div class="content">
-              <h3 class="date sr-only">june 13, 2021</h3>
-              <p class="text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Blanditiis cum sint quos quod soluta tempora qui eos laudantium
-                magnam pariatur culpa velit hic explicabo quae fugiat earum ea
-                quam officia doloremque accusantium, aspernatur debitis?
-                Voluptate laudantium debitis exercitationem consequuntur
-                voluptatum.
-              </p>
-              <p class="date" aria-hidden="true">june 13, 2021</p>
-            </div>
-          </article>
-          <article class="item">
-            <div class="content">
-              <h3 class="date sr-only">june 13, 2021</h3>
-              <p class="text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Dolorem porro et eaque numquam libero, totam obcaecati
-                perferendis voluptatum neque eligendi, corrupti sunt ea.
-              </p>
-              <p class="date" aria-hidden="true">june 13, 2021</p>
+              <h3 class="date sr-only">january 16, 2021</h3>
+              <img src="./img/2021-01-16.jpg" alt="watercolours" />
+              <p class="text">virtual plein air</p>
+              <p class="date" aria-hidden="true">jan 16, 2021</p>
             </div>
           </article>
         </section>
       </main>
       <footer>made with &hearts; by yiying 2021, thanks for visiting!</footer>
     </div>
+    <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
