more tweaks, remove console logs

--- a/index.html
+++ b/index.html
@@ -82,7 +82,10 @@
           </article>
         </section>
       </main>
-      <footer>made with &hearts; by yiying 2021, thanks for visiting!</footer>
+      <footer>
+        made with <span class="heart">&hearts;</span> by yiying 2021, thanks for
+        visiting!
+      </footer>
     </div>
     <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
     <script src="./script.js"></script>
