add desc under heading

--- a/index.html
+++ b/index.html
@@ -12,21 +12,25 @@
       <header>
         <h1 class="sr-only">girl making pictures : a virtual sketchbook</h1>
         <h2>hi, i'm yiying & i like to draw.</h2>
+        <p class="desc">
+          this is my virtual sketchbook where I track my art progress and post
+          my sketches, studies, works in progress, etc.
+        </p>
       </header>
       <main>
         <section id="blog" class="grid">
           <article class="item">
             <div class="content">
-              <h3 class="date sr-only">march 21, 2021</h3>
+              <h3 class="date sr-only">june 5, 2021</h3>
               <img
-                src="./img/2021-06-13.jpg"
+                src="./img/2021-06-05.jpg"
                 alt="watercolour painting of a corner of a greek-style amphitheatre"
               />
               <p class="text">
                 amphitheatre at Guild Park, plein air painting. was nice to go
                 outside & paint!
               </p>
-              <p class="date" aria-hidden="true">june 13, 2021</p>
+              <p class="date" aria-hidden="true">june 05, 2021</p>
             </div>
           </article>
           <article class="item">
