using data from js

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         visiting!
       </footer>
     </div>
+    <script src="./data.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
