working with separate data file

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </header>
       <main>
         <section id="blog" class="grid">
-          <article class="item">
+          <!-- <article class="item">
             <div class="content">
               <h3 class="date sr-only">june 5, 2021</h3>
               <img
@@ -75,7 +75,7 @@
               <p class="text">virtual plein air</p>
               <p class="date" aria-hidden="true">jan 29, 2021</p>
             </div>
-          </article>
+          </article> -->
           <article class="item">
             <div class="content">
               <h3 class="date sr-only">january 16, 2021</h3>
